--- a/style.css
+++ b/style.css
@@ -180,19 +180,19 @@ label:focus {
     color: @accent2;
 }
 
-#custom-media {
-    background-color: #66cc99;
-    color: #2a5c45;
-    min-width: 100px;
-}
-
-#custom-media.custom-spotify {
-    background-color: #66cc99;
-}
-
-#custom-media.custom-vlc {
-    background-color: #ffa000;
-}
+/* #custom-media { */
+/*     background-color: #66cc99; */
+/*     color: #2a5c45; */
+/*     min-width: 100px; */
+/* } */
+/**/
+/* #custom-media.custom-spotify { */
+/*     background-color: #66cc99; */
+/* } */
+/**/
+/* #custom-media.custom-vlc { */
+/*     background-color: #ffa000; */
+/* } */
 
 #temperature {
     color: @accent6;
